--- a/remote-manifest.json
+++ b/remote-manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "BitBot Remote",
   "short_name": "BBRemote",
-  "start_url": ".",
+  "start_url": "./bitbotremote.html",
   "display": "standalone",
   "icons": [{
     "src": "icon/512.png",
@@ -13,4 +13,5 @@
     "type": "image/png"
   }]
 }
+
 
