--- a/facerace-manifest.json
+++ b/facerace-manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "KI Kart med Teachable Machjine",
+  "name": "KI Kart med Teachable Machine",
   "short_name": "KI Kart",
   "start_url": "./facerace.html",
   "display": "standalone",
@@ -12,4 +12,5 @@
     "sizes": "128x128",
     "type": "image/png"
   }]
+
 }
