--- a/remote-manifest.json
+++ b/remote-manifest.json
@@ -3,6 +3,7 @@
   "short_name": "BitBot Remote",
   "start_url": "./bitbotremote.html",
   "display": "standalone",
+  "scope": "/",
   "icons": [{
     "src": "icon/512.png",
     "sizes": "512x512",
@@ -13,6 +14,7 @@
     "type": "image/png"
   }]
 }
+
 
 
 
